--- a/init/init.oplus.perf.rc
+++ b/init/init.oplus.perf.rc
@@ -32,3 +32,7 @@ on property:vendor.post_boot.parsed=1
 # IRQ 222: kgsl_3d0_irq
 write /proc/irq/243/smp_affinity_list 2
 write /proc/irq/240/smp_affinity_list 1
+
+on property:persist.sys.device_provisioned=1
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
+    setprop dalvik.vm.dex2oat-threads 6
