lunaa: init: oplus.perf: Import cgroup tuning from gs101
Inspired by
https://github.com/PixelOS-Devices/device_xiaomi_lisa-priv/commit/936b04daff511c21f5a6ea9b201cfd5ef3013bc8

Change-Id: I886b4846b18a285053feb7337996dcbb40994809
Signed-off-by: rk134 <me@rk134.cf>

--- a/init/init.oplus.perf.rc
+++ b/init/init.oplus.perf.rc
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+on init
+    copy_per_line /dev/cpuctl/tasks /dev/cpuctl/system/tasks
+
 service oplus-post-boot /vendor/bin/sh /vendor/bin/init.oplus.post_boot.sh
     class core
     user root
@@ -26,12 +29,33 @@ on early-boot
 on property:sys.boot_completed=1
     start oplus-post-boot
 
+    # Migrate tasks again in case kernel threads are created during boot
+    copy_per_line /dev/cpuctl/tasks /dev/cpuctl/system/tasks
+
 on property:vendor.post_boot.parsed=1
-# IRQ Tuning
-# IRQ 243: msm_drm0
-# IRQ 222: kgsl_3d0_irq
-write /proc/irq/243/smp_affinity_list 2
-write /proc/irq/240/smp_affinity_list 1
+    # IRQ Tuning
+    # IRQ 243: msm_drm0
+    # IRQ 222: kgsl_3d0_irq
+    write /proc/irq/243/smp_affinity_list 2
+    write /proc/irq/240/smp_affinity_list 1
+
+    # Configure uclamp
+    write /dev/cpuctl/top-app/cpu.uclamp.latency_sensitive 1
+    write /dev/cpuctl/background/cpu.uclamp.max 50
+    write /dev/cpuctl/system-background/cpu.uclamp.max 50
+    write /dev/cpuctl/dex2oat/cpu.uclamp.max 60
+    # Setup cpu.shares to throttle background groups (bg ~ 5% sysbg ~ 5% dex2oat ~2.5%)
+    write /dev/cpuctl/background/cpu.shares 1024
+    write /dev/cpuctl/system-background/cpu.shares 1024
+    write /dev/cpuctl/dex2oat/cpu.shares 512
+    write /dev/cpuctl/system/cpu.shares 20480
+    # We only have system and background groups holding tasks and the groups below are empty
+    write /dev/cpuctl/camera-daemon/cpu.shares 20480
+    write /dev/cpuctl/foreground/cpu.shares 20480
+    write /dev/cpuctl/nnapi-hal/cpu.shares 20480
+    write /dev/cpuctl/rt/cpu.shares 20480
+    write /dev/cpuctl/top-app/cpu.shares 20480
+
 
 on property:persist.sys.device_provisioned=1
     setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,6
